2010-06-07  Daisuke Nishikawa  <caffeine@m13.alpha-net.ne.jp>

	Actually install cairomm-xlib-xrender-1.0.pc.

	* configure.ac: Fix a typo in the check for xlib-xrender support in
    cairo. Fixes bug #27066.

2010-01-28  Daniel Elstner  <danielk@openismus.com>

    Clean up configure.ac and add silent rules support

    * configure.ac (AC_INIT): Specify correct URLs for bug reports and the
    project home page.
    (AM_SILENT_RULES): Call macro if defined.
    (MM_PREREQ): Require mm-common 0.8.
    (BOOST_UNIT_TEST_FRAMEWORK_STATIC_LIB): Rewrite the fragile shell code
    of the boost check.

2009-10-19  Jonathon Jongsma <jjongsma@gnome.org>

    bump to 1.8.4, update NEWS

2009-08-13  Jonathon Jongsma <jjongsma@gnome.org>

    Don't force tests to be enabled when CAIROMM_DEVEL is defined

    This was hacked in to ensure that I always built with tests enabled, but the
    boost configure detection scripts are broken right now on my setup, so this just
    hinders my ability to get things done.  remove it.

2009-08-13  Daniel Elstner  <danielk@openismus.com>

	Distribute mm-common documentation utilities

	* docs/Makefile.am (dist_noinst_DATA): List the utility scripts
	installed by mm-common-prepare here, so they will be distributed.

2009-08-13  Daniel Elstner  <danielk@openismus.com>

	Add missing call to MM_CONFIG_DOCTOOL_DIR

	* configure.ac: Call MM_CONFIG_DOCTOOL_DIR([docs]) to indicate to
	mm-common-prepare that this module cannot depend on the utilities
	shipped with glibmm, and needs its own copies.

2009-08-13  Daniel Elstner  <danielk@openismus.com>

	Fix left-over cairomm/cairommconfig.h includes

	* cairomm/cairomm.h: Remove directory prefix from cairommconfig.h
	include statement.
	* cairomm/context.cc: Include <cmath> unconditionally instead of
	conditionally including <math.h>.
	* examples/surfaces/*.cc: ditto,
	* examples/text/text-rotate.cc: ditto.

2009-08-13  Daniel Elstner  <danielk@openismus.com>

	Review and clean up after build overhaul
