@@ -30,21 +30,24 @@ QuartzFontFace::QuartzFontFace(CGFontRef font) :
   check_object_status_and_throw_exception(*this);
 }
 
+RefPtr<QuartzFontFace> QuartzFontFace::create(CGFontRef font)
+{
+  return RefPtr<QuartzFontFace>(new QuartzFontFace(font));
+}
+
+
+#ifndef __LP64__
 QuartzFontFace::QuartzFontFace(ATSUFontID font_id) :
   FontFace(cairo_quartz_font_face_create_for_atsu_font_id(font_id), true)
 {
   check_object_status_and_throw_exception(*this);
 }
 
-RefPtr<QuartzFontFace> QuartzFontFace::create(CGFontRef font)
-{
-  return RefPtr<QuartzFontFace>(new QuartzFontFace(font));
-}
-
 RefPtr<QuartzFontFace> QuartzFontFace::create(ATSUFontID font_id)
 {
   return RefPtr<QuartzFontFace>(new QuartzFontFace(font_id));
 }
+#endif
 
 }
 
